--- a/naughts-and-crosses/pom.xml
+++ b/naughts-and-crosses/pom.xml
@@ -65,7 +65,19 @@
 			<artifactId>java-jwt</artifactId>
 			<version>4.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.9</version>
+		</dependency>	
 	</dependencies>
+			
 
 	<build>
 		<plugins>
